<resources>
    <string name="app_name">Tripme</string>
    <string name="title_activity_navig">navig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Tripmework@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Поиск поездки</string>
    <string name="menu_gallery">Профиль</string>
    <string name="menu_slideshow">Сообщения(в доработке)</string>
    <string name="name">Имя</string>
    <string name="birt">Дата рождения(вам должно быть больше 18)</string>
    <string name="Lname">Фамилия</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Войти</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
