<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAkk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1203D7C"
        android:orientation="vertical"
        tools:context=".Reg">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/amatica_sc"
            android:text="TripMe"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/advent_pro"
            android:text="Регистрация"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="normal" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="42dp"
                    app:srcCompat="@android:drawable/sym_action_email" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/profile" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </ScrollView>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/advent_pro"
            android:hint="@string/Lname"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/today_white_18dp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/birt"
                    android:inputType="date"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/advent_pro"
                    android:text=" Согласие на обработку данных" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="85dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/lock_white_18dp"
                    tools:srcCompat="@drawable/lock_white_18dp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/advent_pro"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#97958A30"
            android:fontFamily="@font/advent_pro"
            android:text="Готово"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>